[package]
name = "aliexpress-sdk"
version = "1.0.0"
authors = ["ThorvaldOF"]
license = "MIT"
description = "A Rust implementation of the Aliexpress Open Platform SDK"
readme = "README.md"
keywords = ["api", "aliexpress", "sdk", "hmac"]
categories = ["api-bindings", "web-programming"]
homepage = "https://github.com/ThorvaldOF/aliexpress-sdk"
repository = "https://github.com/ThorvaldOF/aliexpress-sdk"
edition = "2021"

[dependencies]
hmac = "0.13.0-pre.4"
sha2 = "0.11.0-pre.4"
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["json"] }
hex = "0.4.3"
chrono = "0.4.38"
